Correct modal stuck transition problem in chrome
We do a transition on top and even if not defined, it was 0 for chrome
so it did a transition from 0 to 10%.
Now we set it to be default to 10% on static (unstucked) so this
transition does not happen anymore, but the one from 10% to 5% when
going ful screen still happen.

--- a/gim_project/front/sass/components/_issue.scss
+++ b/gim_project/front/sass/components/_issue.scss
@@ -549,6 +549,9 @@ table.table.table-normal.diff-lines {
         .pr-tabs.stuck {
             margin-top: 46px;
         }
+        .sticky-wrapper > * {
+            top: 10%; // to avoid transition from 0 in chrome, should do nothing on static non-stuck item
+        }
         .stuck {
             @include transition(top 0.35s);
         }
